fix breadcrumb for thin header on mobile

--- a/stylesheets/template/header.less
+++ b/stylesheets/template/header.less
@@ -102,7 +102,6 @@ header{
   .thin-header{
     #breadcrumb{
       .breadcrumb{
-        padding:0;
         font-size:0.8em;
       }
     }
@@ -113,8 +112,6 @@ header{
   .thin-header{
     #breadcrumb{
       .breadcrumb{
-        margin-top:4px;
-        margin-bottom:7px;
         font-size:12px;
       }
     }
